--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,16 +6,12 @@
   "version": "0.0.1",
 
   "icons": {
-    "16": "",
-    "32": "",
-    "48": "",
-    "128": ""
   },
 
   "content_scripts": [{
     "matches": ["*://*/*"],
-    "js": ["js/main.js"],
-    "css": ["css/style.css"]
+    "js": ["vendor/jquery-2.1.4.min.js","js/main.js"],
+    "css": ["css/main.css"]
   }],
 
   "browser_action": {
