--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,13 +10,22 @@
 
   "content_scripts": [{
     "matches": ["*://*/*"],
-    "js": ["vendor/jquery-2.1.4.min.js","js/main.js", "js/popup.js"],
+    "js": ["vendor/jquery-2.1.4.min.js", "js/popup.js"],
     "css": ["css/main.css"]
   }],
+
+   "background": {
+    "scripts": ["js/main.js","vendor/jquery-2.1.4.min.js"],
+    "persistent": false
+  },
 
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "WikiRaces"
+  },
+
+  "externally_connectable": {
+  "matches": ["https://7f9de9f1.ngrok.io/*"]
   },
 
   "permissions": [
