--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -25,7 +25,7 @@
   },
 
   "externally_connectable": {
-  "matches": ["https://7d54ca6d.ngrok.io/*"]
+  "matches": ["http://localhost:3000/*"]
   },
 
   "permissions": [
