--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "md5": "^2.0.0",
+    "moment": "^2.11.2",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0"
   },
