--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
+    "express-handlebars": "^3.0.0",
+    "lodash": "^4.5.0",
     "md5": "^2.0.0",
     "moment": "^2.11.2",
     "morgan": "^1.6.1",
