--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.3.1",
     "body-parser": "^1.13.3",
+    "cheerio": "^0.20.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
+    "got": "^6.1.1",
     "lodash": "^4.5.0",
     "md5": "^2.0.0",
     "moment": "^2.11.2",
